informatica/tarea5/todos-k8s/k8s/todos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todos-app
  name: todos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-pod
  template:
    metadata:
      labels:
        app: todos-pod
    spec:
      containers:
      - name: todos
        resources: {}
        image: danyjavierb/todos:final
        ports:
        - containerPort: 3000
      restartPolicy: Always
