informatica/tarea5/todos-k8s/k8s/todos-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easy-notes
  name: easy-notes-service
spec:
  ports:
  - port: 8081
    targetPort: 3000
  selector:
    app: todos-pod
  type: ClusterIP
