informatica/tarea5/todos-k8s/k8s/todos-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todos-ingress
spec:
  rules:
  - host: todos.local
    http:
      paths:
      - backend:
          serviceName: todos-service
          servicePort: 8081
